chapitres/20/policy-strict.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "mailhog-istio-client-mtls-strict"
  namespace: "test-istio"
spec:
  selector:
    matchLabels:
      app: mailhog
  mtls:
    mode: STRICT
