chapitres/20/destination-rule-mtls.yaml
apiVersion: "networking.istio.io/v1beta1"
kind: "DestinationRule"
metadata:
  name: "mailhog-istio-client-mtls"
  namespace: "test-istio"
spec:
  host: mailhog.test-istio.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
